Fix contrast between bold text in blockquotes

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -87,6 +87,9 @@ blockquote {
   }
 }
 
+blockquote strong {
+  color: #515151;
+}
 
 // Markdown footnotes
 //
